--- a/pages/how_it_works.html
+++ b/pages/how_it_works.html
@@ -21,7 +21,7 @@
       src="https://kit.fontawesome.com/1cd167b8ab.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="../css/estilos.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Document</title>
   </head>
   <body>
