add a star on the upper right corner of one card of the pricing

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a class="nav-link" href="./pages/explore.html">Explore</a></li>
           <li><a class="nav-link" href="./pages/pricing.html">Pricing</a></li>
           <li>
-            <a class="nav-link" href="./pages/try_it_for_free.html"
+            <a class="nav-link no-focus" href="./pages/try_it_for_free.html"
               >Try for free</a
             >
           </li>
