--- a/pages/how_it_works.html
+++ b/pages/how_it_works.html
@@ -36,7 +36,9 @@
           <li><a class="nav-link" href="./explore.html">Explore</a></li>
           <li><a class="nav-link" href="./pricing.html">Pricing</a></li>
           <li>
-            <a class="nav-link" href="./try_it_for_free.html">Try for free</a>
+            <a class="nav-link no-focus" href="./try_it_for_free.html"
+              >Try for free</a
+            >
           </li>
         </ul>
         <button class="btn-mobile-nav">
@@ -49,9 +51,9 @@
     <main>
       <section id="how_it_works">
         <div class="container p-3">
-          <h2 class="container-h2">
+          <h1 class="container-h2">
             Your daily dose of German in 3 simple steps
-          </h2>
+          </h1>
           <div class="row mb-5">
             <div
               class="col-lg-6 col-12 d-flex flex-column justify-content-center"
@@ -76,7 +78,7 @@
                 </li>
               </ul>
             </div>
-            <div class="col-lg-6 col-12">
+            <div class="col-lg-6 col-12 img-container">
               <img src="../images/01_asses_german_level.png" alt="" />
             </div>
           </div>
@@ -106,7 +108,7 @@
                 </li>
               </ul>
             </div>
-            <div class="col-lg-6 col-12">
+            <div class="col-lg-6 col-12 img-container">
               <img src="../images/02_interactive_german_lessons.png" alt="" />
             </div>
           </div>
@@ -136,7 +138,7 @@
                 </li>
               </ul>
             </div>
-            <div class="col-lg-6 col-12">
+            <div class="col-lg-6 col-12 img-container">
               <img src="../images/03_track_progress.png" alt="" />
             </div>
           </div>
