--- a/pages/explore.html
+++ b/pages/explore.html
@@ -23,7 +23,9 @@
           <li><a class="nav-link" href="./explore.html">Explore</a></li>
           <li><a class="nav-link" href="./pricing.html">Pricing</a></li>
           <li>
-            <a class="nav-link" href="./try_it_for_free.html">Try for free</a>
+            <a class="nav-link no-focus" href="./try_it_for_free.html"
+              >Try for free</a
+            >
           </li>
         </ul>
         <button class="btn-mobile-nav">
@@ -35,7 +37,7 @@
     <main class="main-explore">
       <div>
         <h1>Explore</h1>
-        <p>
+        <p class="main-explore-main-text">
           Explore the world of German language and culture with German Lab! Our
           platform is designed to help learners of all levels improve their
           German language skills and deepen their understanding of German
