--- a/pages/try_it_for_free.html
+++ b/pages/try_it_for_free.html
@@ -23,7 +23,9 @@
           <li><a class="nav-link" href="./explore.html">Explore</a></li>
           <li><a class="nav-link" href="./pricing.html">Pricing</a></li>
           <li>
-            <a class="nav-link" href="./try_it_for_free.html">Try for free</a>
+            <a class="nav-link no-focus" href="./try_it_for_free.html"
+              >Try for free</a
+            >
           </li>
         </ul>
         <button class="btn-mobile-nav">
