add responsiveness to all pages

--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Affordable plans for every budget, choose the perfect one for your learning needs. Explore German Lab's pricing options and find the plan that suits you best."
+    />
+    <meta
+      name="keywords"
+      content="GermanLab, pricing, affordable plans, language learning, flashcards, podcasts, personal assistance"
+    />
+
     <link rel="stylesheet" href="../css/style.css" />
     <script
       src="https://kit.fontawesome.com/1cd167b8ab.js"
@@ -232,17 +241,33 @@
       <h2>Let's learn together</h2>
       <p>Follow us</p>
       <div class="socialmedia-icons">
-        <a href="#" class="fa fa-github icon-footer" target="_blank"></a>
+        <a
+          href="https://github.com/"
+          class="fa fa-github icon-footer"
+          target="_blank"
+        ></a>
 
         <a
-          href="#"
+          href="https://www.linkedin.com/feed/"
           class="fa fa-linkedin icon-footer"
           id="profile-link"
           target="_blank"
         ></a>
-        <a href="#" class="fa fa-instagram icon-footer" target="_blank"></a>
-        <a href="#" class="fa fa-facebook icon-footer" target="_blank"></a>
-        <a href="#" class="fa fa-youtube icon-footer" target="_blank"></a>
+        <a
+          href="https://www.instagram.com/"
+          class="fa fa-instagram icon-footer"
+          target="_blank"
+        ></a>
+        <a
+          href="https://www.facebook.com/"
+          class="fa fa-facebook icon-footer"
+          target="_blank"
+        ></a>
+        <a
+          href="https://www.youtube.com/"
+          class="fa fa-youtube icon-footer"
+          target="_blank"
+        ></a>
       </div>
 
       <p>Copyright &copy; GermanLab</p>
