--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Welcome to GermanLab - Your Gateway to Learning German. At GermanLab, our mission is to make learning German engaging, efficient, and tailored to your needs."
+    />
+    <meta
+      name="keywords"
+      content="GermanLab, learn German, language learning, customizable flashcards, AI-powered learning, vocabulary building, pronunciation practice, progress tracking, mobile accessibility"
+    />
+
     <title>GermanLab</title>
     <link rel="stylesheet" href="css/style.css" />
     <script
@@ -106,7 +115,11 @@
           </div>
         </div>
         <div class="home-right-image">
-          <img src="./images/german-lab.jpg" alt="" />
+          <img
+            src="./images/german-lab.jpg"
+            alt="Robot inside GermanLab"
+            loading="lazy"
+          />
         </div>
       </section>
     </main>
@@ -114,17 +127,33 @@
       <h2>Let's learn together</h2>
       <p>Follow us</p>
       <div class="socialmedia-icons">
-        <a href="#" class="fa fa-github icon-footer" target="_blank"></a>
+        <a
+          href="https://github.com/"
+          class="fa fa-github icon-footer"
+          target="_blank"
+        ></a>
 
         <a
-          href="#"
+          href="https://www.linkedin.com/feed/"
           class="fa fa-linkedin icon-footer"
           id="profile-link"
           target="_blank"
         ></a>
-        <a href="#" class="fa fa-instagram icon-footer" target="_blank"></a>
-        <a href="#" class="fa fa-facebook icon-footer" target="_blank"></a>
-        <a href="#" class="fa fa-youtube icon-footer" target="_blank"></a>
+        <a
+          href="https://www.instagram.com/"
+          class="fa fa-instagram icon-footer"
+          target="_blank"
+        ></a>
+        <a
+          href="https://www.facebook.com/"
+          class="fa fa-facebook icon-footer"
+          target="_blank"
+        ></a>
+        <a
+          href="https://www.youtube.com/"
+          class="fa fa-youtube icon-footer"
+          target="_blank"
+        ></a>
       </div>
 
       <p>Copyright &copy; GermanLab</p>
