--- a/pages/explore.html
+++ b/pages/explore.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Explore the world of German language and culture with German Lab! Our platform is designed to help learners of all levels improve their German language skills and deepen their understanding of German culture."
+    />
+    <meta
+      name="keywords"
+      content="GermanLab, explore, German language, German culture, language learning, interactive tools, videos, podcasts, articles"
+    />
+
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css" />
     <script
@@ -56,7 +65,8 @@
         <div class="explore-container-element">
           <img
             src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8bGVhcm5pbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
-            alt=""
+            alt="People studying German with books and computers"
+            loading="lazy"
           />
         </div>
         <div class="explore-container-element">
@@ -89,17 +99,33 @@
       <h2>Let's learn together</h2>
       <p>Follow us</p>
       <div class="socialmedia-icons">
-        <a href="#" class="fa fa-github icon-footer" target="_blank"></a>
+        <a
+          href="https://github.com/"
+          class="fa fa-github icon-footer"
+          target="_blank"
+        ></a>
 
         <a
-          href="#"
+          href="https://www.linkedin.com/feed/"
           class="fa fa-linkedin icon-footer"
           id="profile-link"
           target="_blank"
         ></a>
-        <a href="#" class="fa fa-instagram icon-footer" target="_blank"></a>
-        <a href="#" class="fa fa-facebook icon-footer" target="_blank"></a>
-        <a href="#" class="fa fa-youtube icon-footer" target="_blank"></a>
+        <a
+          href="https://www.instagram.com/"
+          class="fa fa-instagram icon-footer"
+          target="_blank"
+        ></a>
+        <a
+          href="https://www.facebook.com/"
+          class="fa fa-facebook icon-footer"
+          target="_blank"
+        ></a>
+        <a
+          href="https://www.youtube.com/"
+          class="fa fa-youtube icon-footer"
+          target="_blank"
+        ></a>
       </div>
 
       <p>Copyright &copy; GermanLab</p>
