--- a/pages/how_it_works.html
+++ b/pages/how_it_works.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Your daily dose of German in 3 simple steps. Learn German with GermanLab's AI-powered platform, interactive lessons, and personalized feedback. Start your language learning journey today!"
+    />
+    <meta
+      name="keywords"
+      content="GermanLab, learn German, language learning, interactive lessons, personalized feedback, AI-powered platform"
+    />
+
     <!-- BOOTSTRAP -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -79,7 +88,11 @@
               </ul>
             </div>
             <div class="col-lg-6 col-12 img-container">
-              <img src="../images/01_asses_german_level.png" alt="" />
+              <img
+                src="../images/01_asses_german_level.png"
+                alt="screenshot of mobile app of GermanLab to assess your Germal level"
+                loading="lazy"
+              />
             </div>
           </div>
           <div class="row mb-5 flex-row-reverse">
@@ -109,7 +122,11 @@
               </ul>
             </div>
             <div class="col-lg-6 col-12 img-container">
-              <img src="../images/02_interactive_german_lessons.png" alt="" />
+              <img
+                src="../images/02_interactive_german_lessons.png"
+                alt="screenshot of mobile app of GermanLab showing GermanLab's interactive lessons"
+                loading="lazy"
+              />
             </div>
           </div>
           <div class="row mb-5">
@@ -139,7 +156,11 @@
               </ul>
             </div>
             <div class="col-lg-6 col-12 img-container">
-              <img src="../images/03_track_progress.png" alt="" />
+              <img
+                src="../images/03_track_progress.png"
+                alt="screenshot of mobile app of GermanLab showing GermanLab's tracking progress system"
+                loading="lazy"
+              />
             </div>
           </div>
         </div>
@@ -149,17 +170,33 @@
       <h2>Let's learn together</h2>
       <p>Follow us</p>
       <div class="socialmedia-icons">
-        <a href="#" class="fa fa-github icon-footer" target="_blank"></a>
+        <a
+          href="https://github.com/"
+          class="fa fa-github icon-footer"
+          target="_blank"
+        ></a>
 
         <a
-          href="#"
+          href="https://www.linkedin.com/feed/"
           class="fa fa-linkedin icon-footer"
           id="profile-link"
           target="_blank"
         ></a>
-        <a href="#" class="fa fa-instagram icon-footer" target="_blank"></a>
-        <a href="#" class="fa fa-facebook icon-footer" target="_blank"></a>
-        <a href="#" class="fa fa-youtube icon-footer" target="_blank"></a>
+        <a
+          href="https://www.instagram.com/"
+          class="fa fa-instagram icon-footer"
+          target="_blank"
+        ></a>
+        <a
+          href="https://www.facebook.com/"
+          class="fa fa-facebook icon-footer"
+          target="_blank"
+        ></a>
+        <a
+          href="https://www.youtube.com/"
+          class="fa fa-youtube icon-footer"
+          target="_blank"
+        ></a>
       </div>
 
       <p>Copyright &copy; GermanLab</p>
