--- a/pages/try_it_for_free.html
+++ b/pages/try_it_for_free.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Learn German for free with German Lab's feedback form. Provide your personal information, interests, and feedback to get in touch with us and start your German learning journey."
+    />
+    <meta
+      name="keywords"
+      content="GermanLab, Learn German, feedback form, language learning, interests, feedback, customize service"
+    />
+
     <title>Feedback form</title>
     <link rel="stylesheet" href="../css/style.css" />
     <script
@@ -150,17 +159,33 @@
       <h2>Let's learn together</h2>
       <p>Follow us</p>
       <div class="socialmedia-icons">
-        <a href="#" class="fa fa-github icon-footer" target="_blank"></a>
+        <a
+          href="https://github.com/"
+          class="fa fa-github icon-footer"
+          target="_blank"
+        ></a>
 
         <a
-          href="#"
+          href="https://www.linkedin.com/feed/"
           class="fa fa-linkedin icon-footer"
           id="profile-link"
           target="_blank"
         ></a>
-        <a href="#" class="fa fa-instagram icon-footer" target="_blank"></a>
-        <a href="#" class="fa fa-facebook icon-footer" target="_blank"></a>
-        <a href="#" class="fa fa-youtube icon-footer" target="_blank"></a>
+        <a
+          href="https://www.instagram.com/"
+          class="fa fa-instagram icon-footer"
+          target="_blank"
+        ></a>
+        <a
+          href="https://www.facebook.com/"
+          class="fa fa-facebook icon-footer"
+          target="_blank"
+        ></a>
+        <a
+          href="https://www.youtube.com/"
+          class="fa fa-youtube icon-footer"
+          target="_blank"
+        ></a>
       </div>
 
       <p>Copyright &copy; GermanLab</p>
