add favicons and title inside <head> html tag

--- a/pages/explore.html
+++ b/pages/explore.html
@@ -13,12 +13,31 @@
       content="GermanLab, explore, German language, German culture, language learning, interactive tools, videos, podcasts, articles"
     />
 
-    <title>Document</title>
+    <title>Explore</title>
     <link rel="stylesheet" href="../css/style.css" />
     <script
       src="https://kit.fontawesome.com/1cd167b8ab.js"
       crossorigin="anonymous"
     ></script>
+    <!-- favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../favicons/favicon_explore/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../favicons/favicon_explore/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../favicons/favicon_explore/favicon-16x16.png"
+    />
+    <link rel="manifest" href="../favicons/favicon_explore/site.webmanifest" />
   </head>
   <body>
     <header class="header">
