--- a/pages/how_it_works.html
+++ b/pages/how_it_works.html
@@ -31,7 +31,29 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="../css/style.css" />
-    <title>Document</title>
+    <title>How it works</title>
+    <!-- favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../favicons/favicon_how_it_works/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../favicons/favicon_how_it_works/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../favicons/favicon_how_it_works/favicon-16x16.png"
+    />
+    <link
+      rel="manifest"
+      href="../favicons/favicon_how_it_works/site.webmanifest"
+    />
   </head>
   <body>
     <header class="header">
