--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -18,7 +18,26 @@
       src="https://kit.fontawesome.com/1cd167b8ab.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Pricing</title>
+    <!-- favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../favicons/favicon_pricing/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../favicons/favicon_pricing/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../favicons/favicon_pricing/favicon-16x16.png"
+    />
+    <link rel="manifest" href="../favicons/favicon_pricing/site.webmanifest" />
   </head>
   <body>
     <header class="header">
