--- a/pages/try_it_for_free.html
+++ b/pages/try_it_for_free.html
@@ -13,12 +13,34 @@
       content="GermanLab, Learn German, feedback form, language learning, interests, feedback, customize service"
     />
 
-    <title>Feedback form</title>
+    <title>Try it for free</title>
     <link rel="stylesheet" href="../css/style.css" />
     <script
       src="https://kit.fontawesome.com/1cd167b8ab.js"
       crossorigin="anonymous"
     ></script>
+    <!-- favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../favicons/favicon_try_it_for_free/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../favicons/favicon_try_it_for_free/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../favicons/favicon_try_it_for_free/favicon-16x16.png"
+    />
+    <link
+      rel="manifest"
+      href="../favicons/favicon_try_it_for_free/site.webmanifest"
+    />
   </head>
   <body class="body-form">
     <header class="header">
