--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
       src="https://kit.fontawesome.com/1cd167b8ab.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="favicons/favicon_home/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicons/favicon_home/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicons/favicon_home/favicon-16x16.png"
+    />
+    <link rel="manifest" href="favicons/favicon_home/site.webmanifest" />
   </head>
   <body>
     <header class="header">
